# shockercalc

./: .gitignore  .pre-commit-config.yaml  AI_USAGE_POLICY  CHANGELOG.md  EULA  LICENSE  README.md  REUSE.toml  ROADMAP.md  THIRD_PARTY_NOTICES  buildozer.spec  main.py  mobile_main.py  p4a_hooks.py  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  requirements-mobile.txt  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: android-release.yml  android.yml  lint.yml
LICENSES/: LicenseRef-Bitstream-Vera.txt  LicenseRef-RefrigerationCalc-Proprietary-1.0.txt  LicenseRef-Third-Party-Notices.txt
android/src/pl/mdpuch/shockercalc/: ShockerCalcActivity.java
android/src/pl/smilczarek/refrigerationcalc/: AdvertisingService.java  BillingService.java  FileShareService.java  FirebaseTelemetryService.java  PrivacyConsentService.java  RefrigerationCalcActivity.java  RefrigerationSplashView.java
assets/: Table3.json
assets/store/: render_product_icon.py
docs/: ANDROID_QA_CHECKLIST.md  ANDROID_SIZE_AUDIT_2026-06-24.md  ANDROID_SIZE_AUDIT_2026-07-05.md  ANDROID_TOOLCHAIN_AUDIT_2026-06-20.md  BRAND_MOTION_SPEC.md  FIREBASE_SETUP.md  LICENSE_AND_AI_AUDIT_2026-07-21.md  MOBILE_MAIN_REFACTOR_SKELETON.md  MOBILE_REFACTOR_PLAN.md  PLATFORM_FEATURES_BACKLOG.md  PLAY_CONSOLE_RELEASE_1.4.0.md  PLAY_CONSOLE_RELEASE_1.4.1.md  PRODUCT_ASSET_AUDIT_2026-07-05.md  THERMAL_DATA_AUDIT_2026-06-21.md  privacy.html  product_asset_audit_2026-07-05.csv
resources/strings/: README.md  languages.json
tests/: test_android_advertising_service.py  test_android_billing_service.py  test_android_build_config.py  test_android_file_share_service.py  test_android_firebase_service.py  test_android_legal_bundle.py  test_android_privacy_consent_service.py  test_calculations.py  test_entitlements.py  test_formatters.py  test_labor.py  test_legal_documents.py  test_mobile_catalog.py  test_mobile_chart_data.py  test_mobile_currency.py  test_mobile_i18n.py  test_mobile_labor_rates_dialog.py  test_mobile_labor_tab.py  test_mobile_layout.py  test_mobile_legal_dialog.py  test_mobile_monetization.py  test_mobile_settings_dialog.py  test_mobile_smoke.py  test_mobile_theme.py  test_product_assets.py  test_table3_reference.py  test_user_data.py  test_validators.py  test_valves.py
tools/: __init__.py  android_size_report.py  audit_product_assets.py  generate_brand_assets.py  generate_intro_preview.py  verify_android_legal_bundle.py
tpof/: __init__.py
tpof/core/: __init__.py  calculations.py  data_loader.py  formatters.py  models.py  pdf_report.py  pdf_report_mobile.py  validators.py  valves.py
tpof/desktop/: __init__.py  app.py  paths.py
tpof/labor/: __init__.py  config.py  cost_calculator.py  models.py  validation.py
tpof/mobile/: __init__.py  __main__.py  android_bridge.py  app.py  catalog.py  chart_data.py  constants.py  currency.py  entitlements.py  hints.py  i18n.py  layout.py  main.py  paths.py  pdf_export.py  telemetry.py  theme.py  user_data.py  validation.py
tpof/mobile/dialogs/: __init__.py  custom_product.py  labor_rates.py  legal.py  privacy.py  settings.py
tpof/mobile/services/: __init__.py  entitlements_ui.py  monetization.py  telemetry_ui.py
tpof/mobile/tabs/: __init__.py  freezing.py  labor.py  valves.py
tpof/mobile/widgets/: __init__.py  bottom_nav.py  charts.py  frost.py  menus.py  notice.py  stage_icons.py  toolbar.py
