[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shocker-calc"
version = "1.4.8"
description = "Refrigeration Calc — kalkulator zapotrzebowania chłodu dla procesu zamrażania (desktop + mobile)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sebastian Milczarek", email = "" },
]
license = { text = "Proprietary" }
keywords = ["chłodnictwo", "zamrażanie", "kalkulator", "HVAC", "refrigeration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "Pillow==12.2.0",
  "reportlab==5.0.0",
  "pypdf==6.13.3",
]

[project.optional-dependencies]
desktop = ["ttkbootstrap==1.20.3"]
mobile = ["kivy==2.3.1", "kivymd==1.2.0"]
dev = ["pytest==9.1.1", "pytest-cov==7.1.0"]

[project.scripts]
shocker-calc = "tpof.desktop.app:main"

[tool.setuptools.packages.find]
include = ["tpof*"]
exclude = ["tests*", "archive*"]

[tool.setuptools.package-data]
tpof = ["../assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
