[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shocker-calc"
version = "1.5.6"
description = "Refrigeration Calc — kalkulator zapotrzebowania chłodu dla procesu zamrażania (desktop + mobile)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sebastian Milczarek", email = "" },
]
license = { text = "Proprietary" }
keywords = ["chłodnictwo", "zamrażanie", "kalkulator", "HVAC", "refrigeration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "Pillow==12.2.0",
  "reportlab==5.0.0",
  "pypdf==6.13.3",
]

[project.optional-dependencies]
desktop = ["ttkbootstrap==1.20.3"]
mobile = ["kivy==2.3.1", "kivymd==1.2.0"]
dev = ["pytest==9.1.1", "pytest-cov==7.1.0", "ruff==0.15.20", "mypy==2.1.0"]

[project.scripts]
shocker-calc = "tpof.desktop.app:main"

[tool.setuptools.packages.find]
include = ["tpof*"]
exclude = ["tests*", "archive*"]

[tool.setuptools.package-data]
tpof = ["../assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
# E501 (line length) and B905 (zip strict changes behavior) are adopted gradually.
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.10"
# Pure, framework-independent modules only. The Kivy UI (mobile/main.py) and the
# Tkinter UI (desktop/app.py) use heavy dynamic attributes and are excluded.
files = [
    "tpof/core",
    "tpof/labor",
    "tpof/mobile/constants.py",
    "tpof/mobile/catalog.py",
    "tpof/mobile/i18n.py",
    "tpof/mobile/theme.py",
    "tpof/mobile/layout.py",
    "tpof/mobile/validation.py",
    "tpof/mobile/telemetry.py",
    "tpof/mobile/user_data.py",
    "tpof/mobile/entitlements.py",
    "tpof/mobile/paths.py",
    "tpof/mobile/android_bridge.py",
    "tpof/mobile/pdf_export.py",
]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
